@@ -1,1 +1,2 @@
 DIST khmer-0.8.tar.gz 18924997 SHA256 3fc678c7c7987a2e203ee053270e9565d1fc845ff472851e52c93efa19887c46 SHA512 712c0879f686fc279c34be371b1926b42322ba1f2cc679fbc61bf682096cc15c4170d30cf7280d8153af61a23fcc34412b8833112d046de4225bb64808bd37a4 WHIRLPOOL 8115de1a306eb721cfc0d3e3f0a4d4c1e99fe98b40138237fe87f50d011e96bfe40da5aef7ef39e2ec018567bb67473b706464d40f70869a8d39a3612a30c556
+DIST khmer-1.0.1.tar.gz 18975505 SHA256 9ab86b43de964265f94cb535ea9de41bc3868710561c5daa29e540e8237c27a0 SHA512 930dd3795a2921794a9f67da6352752fc8bd6baff15292f8b354d821883b429c422bda4f03501442bce65dfce3cc50eebdb2773056fb6049659536831f8929fd WHIRLPOOL b53fa662144572134019eb7ca5e474ccbd18aec286ffacf3ef013d562a6cb5a264ea367eb5b4151d77b422e42b35244d0331c5d0395767c4c4bb5c2ac01d601c
