@@ -2,6 +2,12 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*khmer-1.0.1 (15 May 2014)
+
+  15 May 2014; Justin Lecher <jlec@gentoo.org> khmer-0.8.ebuild,
+  +khmer-1.0.1.ebuild:
+  Version BUmp
+
   28 Mar 2014; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz> khmer-9999.ebuild:
   sci-biology/khmer: upstream dropped the bundled zlib/bzip2 use if it is
   available system-wide, upstream https://github.com/ged-lab/khmer/pull/346
